; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_timer.c_skynet_updatetime.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_timer.c_skynet_updatetime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32 }

@TI = common dso_local global %struct.TYPE_3__* null, align 8
@.str = private unnamed_addr constant [42 x i8] c"time diff error: change from %lld to %lld\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @skynet_updatetime() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = call i64 (...) @gettime()
  store i64 %4, i64* %1, align 8
  %5 = load i64, i64* %1, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** @TI, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp slt i64 %5, %8
  br i1 %9, label %10, label %19

10:                                               ; preds = %0
  %11 = load i64, i64* %1, align 8
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** @TI, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = call i32 @skynet_error(i32* null, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i64 %11, i64 %14)
  %16 = load i64, i64* %1, align 8
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** @TI, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  store i64 %16, i64* %18, align 8
  br label %52

19:                                               ; preds = %0
  %20 = load i64, i64* %1, align 8
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** @TI, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = icmp ne i64 %20, %23
  br i1 %24, label %25, label %51

25:                                               ; preds = %19
  %26 = load i64, i64* %1, align 8
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** @TI, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = sub nsw i64 %26, %29
  %31 = trunc i64 %30 to i32
  store i32 %31, i32* %2, align 4
  %32 = load i64, i64* %1, align 8
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** @TI, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 0
  store i64 %32, i64* %34, align 8
  %35 = load i32, i32* %2, align 4
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** @TI, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 1
  %38 = load i32, i32* %37, align 8
  %39 = add nsw i32 %38, %35
  store i32 %39, i32* %37, align 8
  store i32 0, i32* %3, align 4
  br label %40

40:                                               ; preds = %47, %25
  %41 = load i32, i32* %3, align 4
  %42 = load i32, i32* %2, align 4
  %43 = icmp slt i32 %41, %42
  br i1 %43, label %44, label %50

44:                                               ; preds = %40
  %45 = load %struct.TYPE_3__*, %struct.TYPE_3__** @TI, align 8
  %46 = call i32 @timer_update(%struct.TYPE_3__* %45)
  br label %47

47:                                               ; preds = %44
  %48 = load i32, i32* %3, align 4
  %49 = add nsw i32 %48, 1
  store i32 %49, i32* %3, align 4
  br label %40

50:                                               ; preds = %40
  br label %51

51:                                               ; preds = %50, %19
  br label %52

52:                                               ; preds = %51, %10
  ret void
}

declare dso_local i64 @gettime(...) #1

declare dso_local i32 @skynet_error(i32*, i8*, i64, i64) #1

declare dso_local i32 @timer_update(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
